# GAMES101-Assignments

./: Readme.md  environment_setup.txt  libubsan1-8.2.1-3.bs1.el7.x86_64.rpm
Assignment0/: CMakeLists.txt  main.cpp  vcpkg.json
Assignment1/代码框架/: CMakeLists.txt  main.cpp
Assignment2/代码框架/: CMakeLists.txt  main.cpp  rasterizer.cpp
Assignment3/: 补充.txt
Assignment3/Code/: CMakeLists.txt  compile_commands.json  main.cpp  rasterizer.cpp
Assignment4/code/: CMakeLists.txt  compile_commands.json  main.cpp
Assignment5/Code/: CMakeLists.txt  Renderer.cpp  Triangle.hpp  compile_commands.json
Assignment6/Assignment6/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Triangle.hpp  Vector.hpp  compile_commands.json
Assignment7/: 补充.txt
Assignment7/Assignment7/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Material.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  Triangle.hpp  Vector.hpp  compile_commands.json  main.cpp
Assignment8/: CMakeLists.txt
Assignment8/src/: CMakeLists.txt  rope.cpp
